<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="number_picker_increment_button">Increase</string>
    <string name="number_picker_decrement_button">Decrease</string>
    <string name="number_picker_increment_scroll_mode"><xliff:g id="value" example="3">%s</xliff:g> touch and hold.</string>
    <string name="number_picker_increment_scroll_action">Slide up to increase and down to decrease.</string>
    <string name="time_picker_increment_minute_button">Increase minute</string>
    <string name="time_picker_decrement_minute_button">Decrease minute</string>
    <string name="time_picker_increment_hour_button">Increase hour</string>
    <string name="time_picker_decrement_hour_button">Decrease hour</string>
    <string name="time_picker_increment_set_pm_button">Set PM</string>
    <string name="time_picker_decrement_set_am_button">Set AM</string>
    <string name="date_picker_increment_month_button">Increase month</string>
    <string name="date_picker_decrement_month_button">Decrease month</string>
    <string name="date_picker_increment_day_button">Increase day</string>
    <string name="date_picker_decrement_day_button">Decrease day</string>
    <string name="date_picker_increment_year_button">Increase year</string>
    <string name="date_picker_decrement_year_button">Decrease year</string>
    <string name="app_name">GuchaGuchaRunRecorder</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string translatable="false" name="durationformatshort"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <string translatable="false" name="durationformatlong"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <string name="GPS_ON">GPS setting is enabled.</string>
    <string name="GPS_OFF">GPS setting is disabled.</string>
    <string name="meter">m</string>
    <string name="killometer">km</string>
    <string name="second">s</string>
    <string name="minute">m</string>
    <string name="hour">h</string>
    <string name="meterpersecond">m/s</string>
    <string name="killoperhour">km/h</string>
    <string name="mph">mph</string>
    <string name="mile">mile</string>
    <string name="feet">feet</string>
    <string name="cant_get">--</string>
    <string name="DLG_TITLE_EXPORT_PROGRESS">Now saving</string>
    <string name="MSG_EXPORT_PROGRESS">Now saving GPX file.</string>
    <string name="SaveError">Failed to save the result. Please retry or give up saving.</string>
    <string name="SaveErrorGPX">Failed to save the gpx file. Please retry or give up saving.</string>
    <string name="SaveErrorGPXOnly">Failed to save the GPX file  but database data is saved. Please retry or give up saving.</string>
    <string name="SaveErrorDatabaseOnly">Failed to save the database data but GPX file is saved. Please retry or give up saving.</string>
    <string name="SaveOK">The results have saved.</string>
    <string name="datetime_display_format_full">yyyy/MM/dd HH:mm:ss</string>
    <string name="datetime_display_format">M/dd HH:mm:ss</string>
    <string name="datetime_display_format2">dd HH:mm:ss</string>
    <string name="month_display_format">yyyy/MM</string>
    <string name="date_display_format">yyyy/MM/dd</string>
    <string name="time_display_format">HH:mm:ss</string>
    <string name="gmt_date_time_for_gpx_format">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
    <string name="time_for_id_format">yyyyMMddHHmmssSSS</string>
    <string name="workouttime_display_format" formatted="false"><xliff:g id="workouttime">%s:%s:%s</xliff:g></string>
    <string name="menu_detail">Detail</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_share">Share</string>
    <string name="menu_edit">Edit</string>
	<string name="menu_recovery">recovery</string>
	<string name="menu_setting">setting</string>
    <string name="GPX_EXISTS">GPX exist</string>
    <string name="GPX_LOSE">GPX lost</string>
    <string name="LAP_COUNT_LABEL">Lap:</string>
    <string name="LAP_LABEL">Lap:</string>
    <string name="Deleted">deleted.</string>
    <string name="Delete_failed">delete failed.</string>
    <string name="Share">Send text to other application</string>
	<string name="default_activity_name">Running </string>
    <string name="distance_label">[distance]</string>
	<string name="time_label">[time]</string>
	<string name="to"> - </string>
	<string name="speed_label">[speed]</string>
	<string name="gpx_share">GPX file sharing</string>
	<string name="cant_start_workout_because_error">Sorry\, failed to start work out because error occurred.</string>
	<string name="cant_recovery_because_error">Sorry\, failed to the recovery preview work out result because error occurred.</string>
	<string name="no_title"></string>
	<string name="description_save">save the edit contents.</string>
	<string name="description_cancel">cancel the edit contents.</string>
	<string name="label_start_date_time">StartTime</string>
	<string name="label_insert_date_time">InsertTime</string>
	<string name="label_lapname">Name</string>
	<string name="label_activity_type">ActivityType</string>
	<string name="label_lap_distance">Distance</string>
	<string name="label_lap_time">LapTime</string>
	<string name="label_lap_speed">LapSpeed</string>
	<string name="label_lap_distance_fixed">InputDistance</string>
	<string name="label_lap_time_fixed">InputLapTime</string>
	<string name="label_lap_speed_fixed">InputLapSpeed</string>
	<string name="label_gpxfilepath">GpxFilePath</string>
	<string name="label_gpxfilepath_fixed">InputGpxFilePath</string>
	<string name="hint_startdatetime">recording start time</string>
	<string name="hint_insertdatetime">recording end time?</string>
	<string name="hint_lapname">name of the lap</string>
	<string name="hint_activity_type">activity type</string>
	<string name="hint_lapdistance">distance of the lap</string>
	<string name="hint_lap_time">time of the lap</string>
	<string name="hint_lap_speed">speed of the lap</string>
	<string name="hint_lapdistance_fixed">distance of the lap that input by you(higher priority)</string>
	<string name="hint_lap_time_fixed">time of the lap that input by you(higher priority)</string>
	<string name="hint_lap_speed_fixed">speed of the lap that input by you(higher priority)</string>
	<string name="hint_gpxfilepath">path of the gpx file of the lap</string>
	<string name="hint_gpxfilepath_fixed">path of the gpx file of the lap input by you(higher priority)</string>
	<string name="label_unit_distance">m</string>
	<string name="label_unit_speed">km/h</string>
	<string name="edit_error_cant_launch">Sorry\, you can\'t edit data because error occurred.</string>
	<string name="date_button_caption">edit</string>
	<string name="INPUTDLG_TITLE_DATETIME">input date and time</string>
	<string name="INPUTDLG_TITLE_TIME">input time</string>
	<string name="data_updated">data updated.</string>
	<string name="data_not_updated">data is not updated.(maybe nothing changed.)</string>
  <string name="activity_type_airplane"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for airplane.">
    airplane
  </string>
  <string name="activity_type_atv"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for ATV (All Terrain Vehicles).">
    ATV
  </string>
  <string name="activity_type_biking"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for biking.">
    biking
  </string>
  <string name="activity_type_blimp"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for blimp.">
    blimp
  </string>
  <string name="activity_type_boat"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for boat.">
    boat
  </string>
  <string name="activity_type_climbing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for climbing.">
    climbing
  </string>
  <string name="activity_type_commercial_airplane"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for commercial airplane.">
    commercial airplane
  </string>
  <string name="activity_type_cross_country_skiing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for cross-country skiing.">
    cross-country skiing
  </string>
  <string name="activity_type_cycling"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for cycling.">
    cycling
  </string>
  <string name="activity_type_dirt_bike"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for dirt bike.">
    dirt bike
  </string>
  <string name="activity_type_donkey_back_riding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for donkey back riding.">
    donkey back riding
  </string>
  <string name="activity_type_driving"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for driving.">
    driving
  </string>
  <string name="activity_type_driving_bus"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for driving bus.">
    driving bus
  </string>
  <string name="activity_type_driving_car"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for driving car.">
    driving car
  </string>
  <string name="activity_type_ferry"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for ferry.">
    ferry
  </string>
  <string name="activity_type_frisbee"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for frisbee.">
    frisbee
  </string>
  <string name="activity_type_gliding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for gliding.">
    gliding
  </string>
  <string name="activity_type_hang_gliding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for hang gliding.">
    hang gliding
  </string>
  <string name="activity_type_helicopter"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for helicopter.">
    helicopter
  </string>
  <string name="activity_type_hiking"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for hiking.">
    hiking
  </string>
	<string name="display_settings">Display Settings</string>
	<string name="distance_unit">unit for distance</string>
	<string name="distance_unit_summary">unit for distance of this app</string>
	<string name="choice_unit_dlg_title">Please select the unit.</string>
	<string name="default_activity_type_title">default activity type</string>
	<string name="default_activity_type_summary">activity type when application launch.</string>
	<string name="default_activity_type_dialog_title">Please select the default activity type.</string>
</resources>